objects/AE_Sales_Goals__c.object
<CustomObject>
    <fields>
        <fullName>AE_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AE_Sales_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>AE Sales Goals</relationshipLabel>
        <relationshipName>AE_Sales_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubExpoSubExpo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubExpo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SubExpo__c.Event__c</field>
                <operation>equals</operation>
                <valueField>$Source.Event__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SubExpo__c</referenceTo>
        <relationshipLabel>AE Sales Goals</relationshipLabel>
        <relationshipName>AE_Sales_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Booth_Revenue__c</fullName>
        <label>Target Booth Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Digital_Revenue__c</fullName>
        <label>Target Digital Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_List_Rental_Revenue__c</fullName>
        <label>Target List Rental Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_NSF__c</fullName>
        <label>Target NSF</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Other_Revenue__c</fullName>
        <label>Target Other Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Print_Revenue__c</fullName>
        <label>Target Print Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Sponsorship_Revenue__c</fullName>
        <label>Target Sponsorship Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AE Sales Goals</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>AE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AE Sales Goals</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>